<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">maimai updater</string>
    <string name="menu_item_switch">Proxy</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_exit">Exit</string>
    <string name="config_url">Config URL</string>
    <string name="config_not_set_value">Not set</string>
    <string name="config_url_scan">Scan an QR code</string>
    <string name="config_url_manual">Type manually</string>
    <string name="config_url_scan_hint">Scan the QR code of your config url</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_more">More&#8230;</string>
    <string name="vpn_connected_status">connected</string>
    <string name="vpn_disconnected_status">disconnected</string>
    <string name="about_info">舞萌 DX 查分器 - 安卓数据更新器\n交流qq群：224548349\nby:bakapiano</string>
    <string name="exit_confirm_info">This will disconnect the VPN connection, Are you sure to exit?</string>
    <string name="err_invalid_url">The config URL is invalid.</string>
    <string name="config_url_hint">URL or local file path</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="username">查分器账号</string>
    <string name="password">查分器密码</string>
    
    <!-- New UI strings -->
    <string name="account_management">账号管理</string>
    <string name="add_account">添加账号</string>
    <string name="delete_account">删除账号</string>
    <string name="select_avatar">选择头像</string>
    <string name="upload_settings">上传设置</string>
    <string name="settings">设置</string>
    <string name="theme_settings">主题设置</string>
    <string name="theme_light">浅色主题</string>
    <string name="theme_dark">深色主题</string>
    <string name="theme_auto">跟随系统</string>
    <string name="theme_color">主题颜色</string>
    <string name="proxy_settings">代理设置</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>
    <string name="copy_url">复制链接</string>
    <string name="auto_launch_wechat">自动打开微信</string>
    <string name="save">保存</string>
    <string name="start_task">启动任务</string>
    <string name="stop_task">停止任务</string>
    
    <!-- Progress strings -->
    <string name="progress_preparing">准备中</string>
    <string name="progress_fetching">获取中</string>
    <string name="progress_uploading">上传中</string>
    <string name="progress_complete">完成</string>
    <string name="progress_error">错误</string>
    <string name="overall_progress">总进度</string>
    
    <!-- Difficulty levels -->
    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>
    <string name="master">Master</string>
    <string name="remaster">Re:Master</string>
</resources>
